--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                                 alt="">
                         </summary>
                         <h5 class="header__drop_menu__group">WOMEN</h5>
-                        <hr>
                         <a href="#" class="header__drop_menu__link">Dresses</a>
                         <a href="#" class="header__drop_menu__link">Tops</a>
                         <a href="#" class="header__drop_menu__link">Sweaters/Knits</a>
@@ -40,7 +39,6 @@
                         <a href="#" class="header__drop_menu__link">Skirts/Shorts</a>
                         <a href="#" class="header__drop_menu__link">Accessories</a>
                         <h5 class="header__drop_menu__group">MEN</h5>
-                        <hr>
                         <a href="#" class="header__drop_menu__link">Tees/Tank tops</a>
                         <a href="#" class="header__drop_menu__link">Shirts/Polos</a>
                         <a href="#" class="header__drop_menu__link">Sweaters</a>
@@ -65,7 +63,7 @@
                 </button>
             </div>
         </div>
-        <nav class="header__main_menu">
+        <!-- <nav class="header__main_menu">
             <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOME</a></ul>
             <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">MAN</a></ul>
             <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">WOMEN</a></ul>
@@ -73,7 +71,251 @@
             <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">ACCOSERIESE</a></ul>
             <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">FEATURED</a></ul>
             <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOT DEALS</a></ul>
+        </nav> -->
+
+        <nav class="navigation">
+            <div class="container">
+                <ul class="menu">
+                    <li class="menu-list"><a class="menu-link" href="#">Home</a></li>
+                    <li class="menu-list"><a class="menu-link" href="#">Man</a>
+                        <div class="mega-box">
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <img src="./img/mega_menu_banner.png" alt="" class="menu-baner">
+                        </div>
+                    </li>
+                    <li class="menu-list"><a class="menu-link" href="#">Women</a>
+                        <div class="mega-box">
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <img src="./img/mega_menu_banner.png" alt="" class="menu-baner">
+                        </div>
+                    </li>
+                    <li class="menu-list"><a class="menu-link" href="#">Kids</a>
+                        <div class="mega-box">
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <img src="./img/mega_menu_banner.png" alt="" class="menu-baner">
+                        </div>
+                    </li>
+                    <li class="menu-list"><a class="menu-link" href="#">Accoseriese</a>
+                        <div class="mega-box">
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <img src="./img/mega_menu_banner.png" alt="" class="menu-baner">
+                        </div>
+                    </li>
+                    <li class="menu-list last"><a class="menu-link" href="#">Featured</a>
+                        <div class="mega-box">
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <img src="./img/mega_menu_banner.png" alt="" class="menu-baner">
+                        </div>
+                    </li>
+                    <li class="menu-list last"><a class="menu-link" href="#">Hot Deals </a>
+                        <div class="mega-box">
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <div class="menu-item">
+                                <h3 class="menu-headding">Women</h3>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                                <a href="#" class="mega-link">Dresses</a>
+                            </div>
+                            <img src="./img/mega_menu_banner.png" alt="" class="menu-baner">
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </nav>
+
+
     </header>
     <div class="slider">
         <div class="slider__title">
