SinglePage.html basic layout completed

--- a/single_page.html
+++ b/single_page.html
@@ -18,7 +18,7 @@
         <div class="header__top">
             <div class="header__top__left_block">
                 <div class="header__logo">
-                    <img src="./img/main_logo.png" alt="">
+                    <a href="index.html"><img src="./img/main_logo.png" alt=""></a>
                 </div>
                 <div class="header__slogan">
                     BRAN<span>D</span>
@@ -64,19 +64,19 @@
             </div>
         </div>
         <!-- <nav class="header__main_menu">
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOME</a></ul>
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">MAN</a></ul>
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">WOMEN</a></ul>
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">KIDS</a></ul>
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">ACCOSERIESE</a></ul>
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">FEATURED</a></ul>
-            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOT DEALS</a></ul>
-        </nav> -->
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOME</a></ul>
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">MAN</a></ul>
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">WOMEN</a></ul>
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">KIDS</a></ul>
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">ACCOSERIESE</a></ul>
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">FEATURED</a></ul>
+                <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOT DEALS</a></ul>
+            </nav> -->
 
         <nav class="navigation">
             <div class="container">
                 <ul class="menu">
-                    <li class="menu-list"><a class="menu-link" href="#">Home</a></li>
+                    <li class="menu-list"><a class="menu-link" href="index.html">Home</a></li>
                     <li class="menu-list"><a class="menu-link" href="#">Man</a>
                         <div class="mega-box">
                             <div class="menu-item">
@@ -317,165 +317,89 @@
 
 
     </header>
-    <div class="slider">
-        <div class="slider__title">
-            <img src="./img/slider_logo.png" alt="" class="slider__logo">
-            <h1 class="slider__slogan">
-                THE BRAND
-            </h1>
-            <h2 class="slider__subslogan">
-                OF LUXERIOUS <span>FASHION</span>
-            </h2>
-        </div>
-    </div>
-    <div class="categories">
-        <article class="categories__banner__1">
 
-            <img src="./img/banner1.png" alt="">
-            <div class="categories__banner__description">
-                <h4 class="categories__banner__title">
-                    HOT DEAL
-                </h4>
-                <h3 class="categories__banner__category">
-                    FOR MEN
-                </h3>
-            </div>
-        </article>
-        <article class="categories__banner__2">
-            <img src="./img/banner2.png" alt="">
-            <div class="categories__banner__description">
-                <h4 class="categories__banner__title">
-                    LUXIROUS & TRENDY
-                </h4>
-                <h3 class="categories__banner__category">
-                    ACCESORIES
-                </h3>
-            </div>
-        </article>
-        <article class="categories__banner__3">
-            <img src="./img/banner3.png" alt="">
-            <div class="categories__banner__description">
-                <h4 class="categories__banner__title">
-                    30% OFFER
-                </h4>
-                <h3 class="categories__banner__category">
-                    WOMEN
-                </h3>
-            </div>
-        </article>
-        <article class="categories__banner__4">
-            <img src="./img/banner4.png" alt="">
-            <div class="categories__banner__description">
-
-                <h4 class="categories__banner__title">
-                    NEW ARRIVALS
-                </h4>
-                <h3 class="categories__banner__category">
-                    FOR KIDS
-                </h3>
-            </div>
-        </article>
+    <section class="breadcrumb">
+        <h2 class="breadcrumb__location">NEW ARRIVALS</h2>
+        <ul class="breadcrumb__path">
+            <li class="breadcrumb__item"><a href="" class="breadcrumb__link">HOME</a></li>
+            <li class="breadcrumb__item"><a href="" class="breadcrumb__link">WOMEN</a></li>
+            <li class="breadcrumb__item"><a href="" class="breadcrumb__link">NEW ARRIVALS</a></li>
+        </ul>
+    </section>
+    <div class="product-slide">
+        <a href="" class="product-slide__slider">❮</a>
+        <img src="./img/single_product_photo.png" alt="" class="product_slide__product">
+        <a href="" class="product-slide__slider">❯</a>
     </div>
-    <section class="products">
-        <h2 class="products__title">Fetured Items</h2>
-        <p class="products__slogan">Shop for items based on what we featured in this week</p>
-        <div class="products__container">
-            <article class="products__product">
-                <a href="single_page.html"><img class="products__product__photo" src="./img/product1.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+    <section class="product-description">
+        <h2 class="product-group">WOMEN COLLECTION</h2>
+        <hr>
+        <h3 class="products__title">Moschino Cheap And Chic</h3>
+        <p class="product-description">Compellingly actualize fully researched processes before proactive
+            outsourcing. Progressively syndicate collaborative
+            architectures before cutting-edge services. Completely visualize parallel core competencies rather than
+            exceptional
+            portals.</p>
+        <p class="product-material">MATERIAL: COTTON</p>
+        <p class="product-designer">DESIGNER: BINBURHAN</p>
+        <p class="product-price">$561</p>
+        <hr>
+        <form action="submit" class="product-metrics">
+            <p class="product-metrics__title">CHOOSE COLOR</p>
+            <input type="color" name="" id="">
+            <p class="product-metrics__title">CHOOSE SIZE</p>
+            <input type="checkbox" name="" id="">
+            <p class="product-metrics__title">QUANTITY</p>
+            <input type="number" name="" id="">
+            <button type="reset">CLEAR</button>
+            <button type="submit">
+                <img src="./img/chart.png" alt="">
+                Add to Cart
+            </button>
+        </form>
+    </section>
+    <section class="promo">
+        <h2 class="promo__title">you may like also</h2>
+        <div class="promo__products-box">
+            <article class="promo__product">
+                <a href="#" class="promo__product-link">
+                    <div class="promo__photo-box">
+                        <img src="./img/single_photo_promo1.png" alt="" class="promo__product-photo">
+                    </div>
+                    <h3 class="promo_product-name">BLAZE LEGGINGS</h3>
+                    <p class="promo__product-price">$52</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
             </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product2.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+            <article class="promo__product">
+                <a href="#" class="promo__product-link">
+                    <div class="promo__photo-box">
+                        <img src="./img/single_photo_promo2.png" alt="" class="promo__product-photo">
+                    </div>
+                    <h3 class="promo_product-name">ALEXA SWEATER</h3>
+                    <p class="promo__product-price">$52</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
             </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product3.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+            <article class="promo__product">
+                <a href="#" class="promo__product-link">
+                    <div class="promo__photo-box">
+                        <img src="./img/single_photo_promo3.png" alt="" class="promo__product-photo">
+                    </div>
+                    <h3 class="promo_product-name">AGNES TOP</h3>
+                    <p class="promo__product-price">$52</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
             </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product4.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+            <article class="promo__product">
+                <a href="#" class="promo__product-link">
+                    <div class="promo__photo-box">
+                        <img src="./img/single_photo_promo4.png" alt="" class="promo__product-photo">
+                    </div>
+                    <h3 class="promo_product-name">SYLVA SWEATER</h3>
+                    <p class="promo__product-price">$52</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
-            </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product5.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
-                </a>
-                <a href="#" class="products__product__price">$52.00</a>
-            </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product6.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
-                </a>
-                <a href="#" class="products__product__price">$52.00</a>
-            </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product7.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
-                </a>
-                <a href="#" class="products__product__price">$52.00</a>
-            </article>
-            <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product8.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
-                </a>
-                <a href="#" class="products__product__price">$52.00</a>
             </article>
         </div>
-        <button class="products__catalogue">
-            Browse All Products
-            <img src="./img/arrow_right.png" alt="">
-        </button>
 
     </section>
-    <div class="feature">
-        <div class="feature__banner">
-            <img src="./img/features_banner_shadow.png" alt="" class="feature__banner__shadow">
-            <div class="feature__banner__slogan">
-                <h2 class="feature__banner__title">
-                    30% <span>OFFER</span>
-                </h2>
-                <h3 class="feature__banner__description">
-                    FOR WOMEN
-                </h3>
-            </div>
-        </div>
-        <div class="feature__boxes">
-            <article class="feature__box">
-                <img src="./img/feature_1.png" alt="" class="feature__box__logo">
-                <h4 class="feature__box__title">Free Delivery</h4>
-                <p class="feature__box__description">Worldwide delivery on all. Authorit tively morph next-generation
-                    innov tion with extensive models.</p>
-            </article>
-            <article class="feature__box">
-                <img src="./img/feature_2.png" alt="" class="feature__box__logo">
-                <h4 class="feature__box__title">Sales & discounts</h4>
-                <p class="feature__box__description">Worldwide delivery on all. Authorit tively morph next-generation
-                    innov tion with extensive models.</p>
-            </article>
-            <article class="feature__box">
-                <img src="./img/feature_3.png" alt="" class="feature__box__logo">
-                <h4 class="feature__box__title">Quality assurance</h4>
-                <p class="feature__box__description">Worldwide delivery on all. Authorit tively morph next-generation
-                    innov tion with extensive models.</p>
-            </article>
-        </div>
-    </div>
     <div class="subscriber">
         <div class="subscriber__teaser">
             <img src="./img/subscribe_manager.png" alt="" class="subscriber__teaser__manager">
@@ -501,7 +425,7 @@
         <div class="footer__menu">
             <div class="footer__menu__logo_container footer__menu__grid_element_1">
                 <div class="header__logo">
-                    <a href="#top"><img src="./img/main_logo.png" alt=""></a>
+                    <a href="index.html"><img src="./img/main_logo.png" alt=""></a>
                 </div>
                 <div class="header__slogan">
                     BRAN<span>D</span>
@@ -530,7 +454,7 @@
             </p>
             <p class="footer__menu__sections footer__menu__grid_element_3">COMPANY</p>
             <p class="footer__menu__links footer__menu__grid_element_4">
-                <a href="#top" class="footer__menu__link">Home</a>
+                <a href="index.html" class="footer__menu__link">Home</a>
                 <a href="" class="footer__menu__link">Shop</a>
                 <a href="" class="footer__menu__link">About</a>
                 <a href="" class="footer__menu__link">How It Works</a>
